:sparkles: add notification

--- a/app/www/empty_report.html
+++ b/app/www/empty_report.html
@@ -1,3 +1,18 @@
+<style>
+  #img_warning {
+    width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #msg_warning {
+    
+  }
+</style>
+
 <br> 
+
 <img src="img/warning.png" alt="warning" id="img_warning">
-<h2 id="msg_warning"> So far, no report has been generated, please use the sidebar to do so.</h2>
+<h2 id="msg_warning" style="color: #f03561;font-size: 1.8em;text-align: center;"> 
+  So far, no report has been generated, please use the sidebar to do so.
+</h2>
