Updating Modus operandi

--- a/reports/Modus-operandi-RAP.html
+++ b/reports/Modus-operandi-RAP.html
@@ -7,7 +7,7 @@
 
         <meta name="author" content="Strategic RAP Champions" />
     
-        <meta name="date" content="2022-09-15" />
+        <meta name="date" content="2022-09-26" />
     
     <title>Modus operandi for Strategic RAP Champions</title>
 
@@ -1798,7 +1798,7 @@ Champions</li>
           <li class="divider"></li>
                                 <li><span><i class="glyphicon glyphicon-user"></i> Strategic
 RAP Champions</span></li>
-                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-09-15</span></li>
+                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-09-26</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -2035,6 +2035,8 @@ communities of practice</a></li>
 <li><a href="https://jamboard.google.com/">Jamboards</a></li>
 <li><a href="https://github.com/orgs/dfo-mar-odis/projects/2">Our own
 Strategic RAP board linked to our code repository</a></li>
+<li><a href="https://086gc.sharepoint.com/:p:/s/MaritimesSpatialPlanning-MAROpenDataLogistics/Ec7TCQGu46ZKgnbzK2ew24UBN-S9p-aCt1wUUxwKrO33uQ">SCRUM
+Approach</a></li>
 </ul>
 </div>
 <div id="why-using-github-for-our-strategic-rap-board" class="section level2">
@@ -2071,6 +2073,7 @@ at DFO and beyond.</p>
 <h2>Contributors</h2>
 <ul>
 <li>Quentin Stoyel</li>
+<li>Adrian Hamer</li>
 <li>Remi Daigle</li>
 <li>Stephen Finnis</li>
 <li>Brian Bower</li>
