--- a/reports/Modus-operandi-RAP.html
+++ b/reports/Modus-operandi-RAP.html
@@ -7,7 +7,7 @@
 
         <meta name="author" content="Strategic RAP Champions" />
     
-        <meta name="date" content="2022-09-26" />
+        <meta name="date" content="2022-09-27" />
     
     <title>Modus operandi for Strategic RAP Champions</title>
 
@@ -1791,6 +1791,7 @@ Champions</li>
           <li><a href="#final-thoughts" id="toc-final-thoughts">Final
           Thoughts</a></li>
           <li><a href="#contributors" id="toc-contributors">Contributors</a></li>
+          <li><a href="#references" id="toc-references">References</a></li>
           </ul></li>
           </ul>
         </nav>
@@ -1798,7 +1799,7 @@ Champions</li>
           <li class="divider"></li>
                                 <li><span><i class="glyphicon glyphicon-user"></i> Strategic
 RAP Champions</span></li>
-                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-09-26</span></li>
+                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-09-27</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -2074,11 +2075,15 @@ at DFO and beyond.</p>
 <ul>
 <li>Quentin Stoyel</li>
 <li>Adrian Hamer</li>
+<li>Kyle Matheson</li>
 <li>Remi Daigle</li>
 <li>Stephen Finnis</li>
 <li>Brian Bower</li>
 <li>Catalina Gomez</li>
 </ul>
+</div>
+<div id="references" class="section level2 unnumbered">
+<h2 class="unnumbered">References</h2>
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div id="ref-Bjarnason2012" class="csl-entry">
 Bjarnason, Elizabeth, Krzysztof Wnuk, and Björn Regnell. 2012.
