--- a/reports/Modus-operandi-RAP.html
+++ b/reports/Modus-operandi-RAP.html
@@ -7,7 +7,7 @@
 
         <meta name="author" content="Strategic RAP Champions" />
     
-        <meta name="date" content="2022-09-27" />
+        <meta name="date" content="2022-10-05" />
     
     <title>Modus operandi for Strategic RAP Champions</title>
 
@@ -1790,7 +1790,7 @@ Champions</li>
           using GitHub for our Strategic RAP board</a></li>
           <li><a href="#final-thoughts" id="toc-final-thoughts">Final
           Thoughts</a></li>
-          <li><a href="#contributors" id="toc-contributors">Contributors</a></li>
+          <li><a href="#contributors-to-rap" id="toc-contributors-to-rap">Contributors to RAP</a></li>
           <li><a href="#references" id="toc-references">References</a></li>
           </ul></li>
           </ul>
@@ -1799,7 +1799,7 @@ Champions</li>
           <li class="divider"></li>
                                 <li><span><i class="glyphicon glyphicon-user"></i> Strategic
 RAP Champions</span></li>
-                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-09-27</span></li>
+                                         <li><span><i class="glyphicon glyphicon-calendar"></i> 2022-10-05</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1882,7 +1882,7 @@ participate in croquet tournaments at <a href="https://www.bio.gc.ca/index-en.ph
 </div>
 <div id="strategic-rap-champions-who-are-we" class="section level2">
 <h2>Strategic RAP Champions: who are we?</h2>
-<p>This section is a modified version of the <a href="https://gss.civilservice.gov.uk/about-us/champion-networks/reproducible-analytical-pipeline-rap-champions/">RAP
+<p>This section is a modified version of the <a href="https://analysisfunction.civilservice.gov.uk/support/reproducible-analytical-pipelines/reproducible-analytical-pipeline-rap-champions/">RAP
 champions network in the UK</a>.</p>
 <p>Strategic RAP champions support the implementation of reproducible
 analytical pipelines at DFO. This includes:</p>
@@ -2070,8 +2070,8 @@ managed by the GC and potentially increase collaboration”.</p>
 We are always happy to share our approaches and support our colleagues
 at DFO and beyond.</p>
 </div>
-<div id="contributors" class="section level2">
-<h2>Contributors</h2>
+<div id="contributors-to-rap" class="section level2">
+<h2>Contributors to RAP</h2>
 <ul>
 <li>Quentin Stoyel</li>
 <li>Adrian Hamer</li>
@@ -2079,6 +2079,7 @@ at DFO and beyond.</p>
 <li>Remi Daigle</li>
 <li>Stephen Finnis</li>
 <li>Brian Bower</li>
+<li>Jeff Jackson</li>
 <li>Catalina Gomez</li>
 </ul>
 </div>
